deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fastapi-echo
  namespace: fastapi-echo
spec:
  selector:
    app: fastapi-echo
  ports:
    - port: 80
      targetPort: 8000
